--- a/introduction.tex
+++ b/introduction.tex
@@ -17,7 +17,7 @@ Although the quality of ASR systems is improving,
   these systems are still far from perfect.
 One of the reasons is that the quality of ASR systems depends heavily on the amount of the training data,
   and there is not enough publicly available transcribed speech data for all languages.
-By providing free ASR web service it is possible to collect vast amount of recordings
+By providing free ASR web service it is possible to collect vasts amount of recordings
   that can be manually transcribed.
 Consequently, \textbf{the second goal of the present thesis is to create an annotation interface}
   so that recordings obtained by CloudASR platform can be annotated and given back to the community.
