--- a/technologies.tex
+++ b/technologies.tex
@@ -92,7 +92,7 @@ Even though, there are several Docker Registry providers\footnote{\url{https://h
 
 \section{Backend}
 The main programming language used for backend development is \textbf{Python}\footnote{\url{https://www.python.org/}}.
-Web is built on top of \textbf{Flask}\footnote{\url{http://flask.pocoo.org/}} microframework
+The web interface is built on top of \textbf{Flask}\footnote{\url{http://flask.pocoo.org/}} microframework
   and it uses \textbf{Gunicorn}\footnote{\url{http://gunicorn.org/}} for production deployment.
 \textbf{MySQL}\footnote{\url{https://www.mysql.com/}} is used as a database,
   but any other SQL database can be used instead,
